--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=development
 APP_KEY=base64:ioxyLOqUnmjr0bQKae47QMsTCLqVTaMtlQNPme7QhjU=
 APP_DEBUG=true
 APP_URL=http://localhost
